# cpp-skel-project

./: .gitignore  CMakeLists.txt  create-project.sh
cmake/Modules/: FindGMock.cmake
src/: CMakeLists.txt  config.h.in  localdefs.cpp  localdefs.hpp
src/hypar3/: CMakeLists.txt  config.h.in
src/test/: CMakeLists.txt  mmaptest.cpp
test/: CMakeLists.txt  dummytest.cpp
