cmake_minimum_required(VERSION 2.8)
project(hypar3 C CXX)
set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake/Modules/")
include(CheckIncludeFiles)
include(CheckFunctionExists)
set(SRC_DIR ${CMAKE_SOURCE_DIR}/src)
set(TEST_DIR ${CMAKE_SOURCE_DIR}/test)
include_directories(${SRC_DIR})
configure_file(${SRC_DIR}/config.h.in
    ${SRC_DIR}/config.h)
add_subdirectory(src)
add_subdirectory(test)
