set(LIB_NAME hypar3)
file(GLOB_RECURSE HEADER_FILES "*.hpp" "*.h")
file(GLOB_RECURSE SRC_FILES "*.cpp")

option(DEBUG "Build the project with debug calls" ON)
check_include_files(list HAVE_CXX_LIST)
check_function_exists(mmap HAVE_MMAP)

add_library(${LIB_NAME} SHARED ${SRC_FILES})

install(FILES
	lib${LIB_NAME}.so
	DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
	PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

install(FILES
    ${HEADER_FILES}
	DESTINATION ${CMAKE_INSTALL_PREFIX}/include/hypar3
	PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)

